# rtos-benchmark

./: .gitignore  CMakeLists.txt  README.md  README_zh-cn.md  bench_api.h  bench_hello_world_test.c  bench_interrupt_latency_test.c  bench_porting_layer_zephyr.c  bench_porting_layer_zephyr.h  bench_sem_context_switch_test.c  bench_sem_signal_release_test.c  bench_utils.h  benchmark-env.sh  prj.conf
freertos/: bench_porting_layer_freertos.c  bench_porting_layer_freertos.h
freertos/armgcc/: CMakeLists.txt  CommandFile.jlink  build_all.bat  build_all.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  shortcut.sh
h/: bench_api.h  bench_utils.h
src/: bench_all.c  bench_api.h  bench_cooperative_context_switch_test.c  bench_hello_world.c  bench_interrupt_latency_test.c  bench_interrupt_offload_latency_test.c  bench_mutex_lock_unlock_test.c  bench_porting_layer_zephyr.c  bench_porting_layer_zephyr.h  bench_sem_context_switch_test.c  bench_sem_signal_release_test.c  bench_thread_switch_yield_test.c  bench_thread_test.c  bench_utils.c  bench_utils.h
src/common/: bench_all.c  bench_interrupt_latency_test.c  bench_malloc_free_test.c  bench_message_queue_test.c  bench_mutex_lock_unlock_test.c  bench_sem_context_switch_test.c  bench_sem_signal_release_test.c  bench_thread_switch_yield_test.c  bench_thread_test.c  bench_utils.c
src/freertos/: CMakeLists.txt  FreeRTOSConfig.h  arch_api.h  bench_porting_layer_freertos.c  bench_porting_layer_freertos.h  freertos.cmake
src/freertos/arch/: CMakeLists.txt
src/freertos/arch/arm/cortex_m/: arch_util.c
src/freertos/timer/: bench_cortex_m_systick.c
src/nuttx/: bench_porting_layer_nuttx.c  bench_porting_layer_nuttx.h
src/nuttx/timer/: timer.c
src/rtems/: README.txt  bench_porting_layer_rtems.c  bench_porting_layer_rtems.h  entry.c  init.c  wscript
src/rtems/arch/riscv/core/: arch_util.c
src/rtems/timer/: bench_riscv_machine_timer.c
src/timer/: bench_cortex_m_systick.c
src/vxworks/: bench_porting_layer_vxworks.c  bench_porting_layer_vxworks.h  bench_porting_layer_vxworks_posix.c  main.c
src/vxworks/arch/aim/: arch_util.c
src/vxworks/arch/arm/armv8/: arch_util.c
src/vxworks/timer/: timer.c
src/zephyr/: CMakeLists.txt  bench_porting_layer_zephyr.c  bench_porting_layer_zephyr.h  prj.frdm_k64f.conf  prj.qemu_riscv32.conf  prj.qemu_riscv64.conf  prj.qemu_x86.conf  zephyr.cmake
src/zephyr/arch/: CMakeLists.txt
src/zephyr/arch/arm/: CMakeLists.txt
src/zephyr/arch/arm/cortex_m/: CMakeLists.txt  arch_util.c
src/zephyr/arch/riscv/core/: arch_util.c
src/zephyr/arch/x86/: arch_util.c
src/zephyr/timer/: CMakeLists.txt  bench_cortex_m_systick.c  bench_hpet.c  bench_litex_timer.c  bench_riscv_machine_timer.c
zephyr/: CMakeLists.txt  prj.conf
zephyr/src/: CMakeLists.txt  bench_porting_layer_zephyr.c  bench_porting_layer_zephyr.h
zephyr/src/arch/: CMakeLists.txt
zephyr/src/arch/arm/cortex_m/: arch_util.c
